# omni

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  mingw-toolchain.cmake  snapcraft.yaml
.github/workflows/: package.yaml
actions/build-web/: action.yml  dockerfile  entrypoint.sh
src/: app.cpp  main.cpp  omni-file.cpp  omni.cpp
